--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.17.3",
     "axios": "^0.24.0",
     "chart.js": "^3.6.2",
+    "chartjs-adapter-moment": "^1.0.0",
     "dotenv": "^10.0.0",
     "html-react-parser": "^1.4.4",
     "millify": "^4.0.0",
